# digraphx

./: AGENTS.md  CONTRIBUTING.md  GEMINI.md  IFLOW.md  README.md  README.rst  all.py  all_ai.cpp  all_ai.rs  coverage.json  mypy.ini  neg_cycle_ai.py  setup.cfg  setup.py  specific.cmake
.github/workflows/: ci.bak  ci.yml  multi-platforms.yml  python-app.yml
cpp_ai/: CMakeLists.txt  README.md  xmake.lua
cpp_ai/.xmake/windows/x64/cache/: history
cpp_ai/examples/: basic_usage.cpp
cpp_ai/include/digraphx/: min_cycle_ratio.hpp  min_parmetric_q.hpp  neg_cycle.hpp  neg_cycle_q.hpp  parametric.hpp  tiny_digraph.hpp  types.hpp
cpp_ai/src/: min_cycle_ratio.cpp  min_parmetric_q.cpp  neg_cycle.cpp  neg_cycle_q.cpp  parametric.cpp  tiny_digraph.cpp
cpp_ai/tests/: integration_tests.cpp  test_neg_cycle.cpp  test_tiny_digraph.cpp
docs/: conf.py  figures_demo.md  index.md  index.rst  requirements.txt
docs/examples/: plot_cycle_detection.py  plot_tiny_digraph.py
experiments/: plot_node_colormap.ipynb
include/digraphx/: neg_cycle.hpp
rust_ai/: Cargo.toml
rust_ai/examples/: basic_usage.rs
rust_ai/src/: lib.rs  min_cycle_ratio.rs  min_parmetric_q.rs  neg_cycle.rs  neg_cycle_q.rs  parametric.rs  tiny_digraph.rs
rust_ai/tests/: integration_tests.rs
src/digraphx/: __init__.py  lict.py  max_cycle_ratio.tpy  mcf.py  min_cycle_ratio.py  min_parametric_q.py  min_parmetric_q.py  neg_cycle.py  neg_cycle_q.py  parametric.py  skeleton.py  tiny_digraph.py
test/source/: test_cycle_ratio_raw.cpp  test_neg_cycle_raw.cpp
tests/: conftest.py  test_coverage_extras.py  test_cycle_ratio.py  test_delay_padding_example_howard.py  test_documentation.py  test_edge_cases.py  test_howard_cycle_cancellation.py  test_mcf.py  test_min_cycle_ratio_extra.py  test_min_cycle_ratio_property.py  test_min_parametric_q.py  test_min_parametric_q_extra.py  test_min_parmetric_q.py  test_neg_cycle.py  test_neg_cycle_q.py  test_neg_cycle_q_simple_timing.py  test_neg_cycle_simple_timing.py  test_optscaling.py  test_parametric.py  test_random_graph.py  test_stress.py  test_timing_example.py  test_timing_example_howard.py  test_tiny_digraph.py  test_tiny_digraph_property.py
