[package]
name = "digraphx"
version = "0.1.0"
edition = "2024"
description = "A directed graph optimization library for network optimization problems"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
license = "MIT"
repository = "https://github.com/luk036/digraphx"

[dependencies]
genawaiter = { version = "0.99", features = ["futures03"] }
num = "0.4"
num-rational = "0.4"
indexmap = "2.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
